# createmyvpn

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  privly.exe.manifest  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/aws/: ami.rs  client.rs  ec2.rs  security_group.rs  teardown.rs  vpc.rs
src-tauri/src/commands/: byo.rs  connect.rs  credentials.rs  credentials_do.rs  deploy.rs  deploy_do.rs  destroy.rs  logs.rs  settings.rs  timer.rs
src-tauri/src/do_cloud/: client.rs  droplet.rs  firewall.rs  key.rs  mod.rs
src-tauri/src/persistence/: store.rs
src-tauri/src/ssh/: client.rs  configure.rs
src-tauri/src/wireguard/: client_config.rs  config_parser.rs  keys.rs  server_config.rs  tunnel.rs  userspace.rs
src-tauri/tests/: integration_tests.rs
src/__tests__/: App.integration.test.tsx  setup.ts
src/components/: ConfirmDialog.tsx  Layout.tsx  LogViewer.tsx  ProgressStepper.tsx  RegionSelector.tsx  StatusBadge.tsx
src/components/__tests__/: ConfirmDialog.test.tsx  Layout.test.tsx  LogViewer.test.tsx  ProgressStepper.test.tsx  RegionSelector.test.tsx  StatusBadge.test.tsx
src/hooks/: useCredentials.ts  useDeployment.ts  useVpnStatus.ts
src/hooks/__tests__/: useCredentials.test.ts  useDeployment.test.ts  useVpnStatus.test.ts
src/lib/: tauri.ts  types.ts
src/lib/__tests__/: tauri.test.ts  types.test.ts
src/pages/: DashboardPage.tsx  DeployPage.tsx  LogsPage.tsx  SettingsPage.tsx  SetupPage.tsx
src/pages/__tests__/: DashboardPage.test.tsx  DeployPage.test.tsx  LogsPage.test.tsx  SettingsPage.test.tsx  SetupPage.test.tsx
