[package]
name = "createmyvpn"
version = "0.1.0"
description = "Deploy your private VPN in under 2 minutes"
authors = ["CreateMyVPN Contributors"]
edition = "2021"

[lib]
name = "createmyvpn_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sts = "1"
aws-sdk-ec2 = "1"
aws-sdk-ssm = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-types = "1"

# SSH
russh = "0.46"
russh-keys = "0.46"

# WireGuard key generation (x25519 via boringtun re-export to avoid version conflict)
rand = "0.8"
base64 = "0.22"

# Userspace WireGuard (built-in client, no wg-quick needed)
# Using git main — crates.io 0.6.0 pins curve25519-dalek=4.0.0-rc.3 which conflicts with russh's stable 4.1.3
boringtun = { git = "https://github.com/cloudflare/boringtun", default-features = false }
tun2 = { version = "2", features = ["async"] }

# Filesystem
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DigitalOcean REST API client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# SSH key generation (Ed25519, OpenSSH PEM format) for DO deployments
ssh-key = { version = "0.6", features = ["ed25519", "rand_core"] }

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
